<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sp.cst142.MainActivity" >

    <Spinner
        android:id="@+id/taskSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/txtPendingTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTask"
        android:layout_centerVertical="true"
        android:text="@string/strTaskDetails" />

    <EditText
        android:id="@+id/txtTaskDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtPendingTasks"
        android:ems="10"
        android:inputType="textMultiLine" >

        
    </EditText>

    <TextView
        android:id="@+id/txtTaskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPendingTasks"
        android:layout_below="@+id/txtTaskDetails"
        android:layout_marginTop="78dp"
        android:text="@string/strTaskTime" />

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="36dp"
        android:onClick="newClicked"
        android:text="@string/strBtnNew" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btnNew"
        android:layout_centerHorizontal="true"
        android:onClick="deleteClicked"
        android:text="@string/strDelete" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnDelete"
        android:layout_alignBottom="@+id/btnDelete"
        android:layout_alignRight="@+id/txtTaskDetails"
        android:onClick="saveClicked"
        android:text="@string/strBtnSave" />

    <EditText
        android:id="@+id/txtTaskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtTaskDetails"
        android:layout_alignLeft="@+id/txtTaskDetails"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/strTaskNameHint" 
        
        >
        <requestFocus />
        </EditText>

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtTaskName"
        android:layout_alignBottom="@+id/txtTaskName"
        android:layout_alignLeft="@+id/taskSpinner"
        android:text="@string/strTaskName" />

    <TextView
        android:id="@+id/tvTaskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/taskSpinner"
        android:layout_below="@+id/taskSpinner"
        android:layout_marginTop="20dp"
        android:text="@string/strIdLabel"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/txtTaskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTaskId"
        android:layout_alignBottom="@+id/tvTaskId"
        android:layout_alignLeft="@+id/btnDelete"
        android:ems="10" />

</RelativeLayout>